test/expected/typedef_rgi.out
typedef register int SI
        ^
9: error: "typedef register int" is illegal for built-in type
